fix spacing issue

--- a/scss/sections/_use-cases.scss
+++ b/scss/sections/_use-cases.scss
@@ -62,7 +62,6 @@
 		padding: 40px 0px;
 	}
 	h3 {
-		margin-top: 0px;
 		color: #888888;
 	}
 }
